# ssg-structure-light

./: 2  CMakeLists.txt  README  README.md  alg_utils.cpp  alg_utils.hpp  cl_alg.cpp  cl_alg.hpp  compile_commands.json  cuda_functions.cpp  cuda_functions.h  cuda_impl.cu  cuda_impl.h  cuda_kernels.cu  cuda_kernels.h  cuda_phase_unwrap.cpp  cuda_phase_unwrap.hpp  experimental_sl_main.cpp  experimental_sl_main.hpp  fct_test.py  main.cpp  opencv_sl_main.cpp  opencv_sl_main.hpp  sl_pcg_alg.hpp  structs.h
.clangd/index/: alg_utils.hpp.407AF6DF5E90048C.idx  cl_alg.hpp.8076716DA74DB66B.idx  cuda_functions.cpp.650F9A63D3FF2BE9.idx  cuda_functions.h.7AB7E22CD2153AED.idx  cuda_impl.h.C7E611576924F9D6.idx  cuda_kernels.h.0304440280D434C6.idx  main.cpp.A1B2821395969FC2.idx  structs.h.8A7ED12D5FF800E0.idx
grpc_py_test/: ex_cap_com_depth_cuda_tpu_hd.sh  ex_cap_com_ref_cuda_tpu_hd.sh  ex_setup_cuda_tpu_hd.sh  sla_client.py  sla_pb2.py  sla_pb2_grpc.py
proj_cam_srv/: CMakeLists.txt
proj_cam_srv/include/: proj_cam_srv.hpp
proj_cam_srv/src/: proj_cam_srv.cpp
proto/: sla.proto
pu_alg/: CMakeLists.txt
pu_alg/cuda_kernels/: CMakeLists.txt
pu_alg/include/: alg_utils.hpp  sl_alg.hpp  sl_tpu_alg.hpp
pu_alg/src/: alg_utils.cpp  cuda_phase_unwrap.cpp  sl_pcg_alg.cpp  sl_tpu_alg.cpp
python/: fct_test.py  main.py  phase_unwrap.py  plots.py  prj_capture.py  read_preprocess.py  reconstruction.py  two_frequncies.py
rpc_srv/: CMakeLists.txt  lfs_transport.hpp  rpc_server.cpp  tpu_service.cpp  tpu_service.hpp
rpc_srv/include/: lfs_transport.hpp  rpc_server.hpp  sla_ctrl_service.hpp
rpc_srv/proto/: sla.proto
rpc_srv/proto_gen/: sla.grpc.pb.cc  sla.grpc.pb.h  sla.pb.cc  sla.pb.h
rpc_srv/src/: lfs_transport.cpp  rpc_server.cpp  sla_ctrl_service.cpp
rpc_srv/src/proto_gen/: sla.grpc.pb.cc  sla.grpc.pb.h  sla.pb.cc  sla.pb.h
sl_alg/: CMakeLists.txt
sl_alg/cuda_kernels/: CMakeLists.txt
sl_alg/cuda_kernels/include/: cu_alg_utils.hpp  cuda_kernels.h
sl_alg/cuda_kernels/src/: cu_alg_utils.cpp  cuda_kernels.cu
sl_alg/include/: alg_utils.hpp  cu_sl_pcg.hpp  cu_sl_tpu.hpp  cuda_phase_unwrap.hpp  opencv_sl.hpp  sl_alg.hpp  sl_alg_factory.hpp  sl_opencv.hpp  sl_pcg.hpp  sl_tpu.hpp  sl_tpu_alg.hpp
sl_alg/src/: alg_utils.cpp  cu_sl_pcg.cpp  cu_sl_tpu.cpp  cuda_phase_unwrap.cpp  opencv_sl.cpp  sl_alg_factory.cpp  sl_opencv.cpp  sl_pcg.cpp  sl_tpu.cpp  sl_tpu_alg.cpp
